--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@
                 <i class="fas fa-server"> Room: </i><input id="roomidInput" value="123" type="text" />
                 <!--<button id="createRoom" onclick="createRoom(roomid.value)" label="createRoom">Create Room</button>-->
                 <i class="fas fa-user"> User: </i><input id="nameInput" value="user" type="text" />
-                <button id="joinButton" onclick="joinRoom(nameInput.value, roomidInput.value)">
+                <button id="joinButton" class="btn btn-primary" onclick="joinRoom(nameInput.value, roomidInput.value)">
                     <i class="fas fa-sign-in-alt"></i> Join
                 </button>
             </div>
