--- a/public/index.html
+++ b/public/index.html
@@ -18,9 +18,9 @@
         <div >
             <div id="login">
                 <br />
-                <i class="fas fa-server"> Room: </i><input id="roomidInput" value="123" type="text" />
+                <i class="fas fa-server" style="color: white;"> Room: </i><input id="roomidInput" value="123" type="text" />
                 <!--<button id="createRoom" onclick="createRoom(roomid.value)" label="createRoom">Create Room</button>-->
-                <i class="fas fa-user"> User: </i><input id="nameInput" value="user" type="text" />
+                <i class="fas fa-user" style="color: white;"> User: </i><input id="nameInput" value="user" type="text" />
                 <button id="joinButton" class="btn btn-primary" onclick="joinRoom(nameInput.value, roomidInput.value)">
                     <i class="fas fa-sign-in-alt"></i> Join
                 </button>
@@ -121,6 +121,9 @@
                 </div>
                 <br />
             </div>
+        </div>
+        <div>
+            <p style="color: white;">This Media server is developed by Reza habibi and Sayeed Mahdi Mousavi</p>
         </div>
     </body>
 
