--- a/public/index.html
+++ b/public/index.html
@@ -123,7 +123,7 @@
             </div>
         </div>
         <div>
-            <p style="color: white;">This Media server is developed by Reza habibi and Sayeed Mahdi Mousavi</p>
+            <p style="color: white;">This Media server is customized by Reza habibi and Sayeed Mahdi Mousavi</p>
         </div>
     </body>
 
